// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToggleSwitch Should render ToggleSwitch as active and green 1`] = `
<styled.div
  active={true}
  aria-checked={true}
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <styled.div
    active={true}
  />
</styled.div>
`;

exports[`ToggleSwitch Should render ToggleSwitch as inactive 1`] = `
<styled.div
  active={false}
  aria-checked={false}
  onClick={[Function]}
  onKeyPress={[Function]}
  role="checkbox"
  tabIndex={0}
>
  <styled.div
    active={false}
  />
</styled.div>
`;
